--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mdx-js/tag": "^0.20.3",
     "gatsby": "^2.19.23",
     "gatsby-image": "^2.0.22",
+    "gatsby-plugin-dark-mode": "^1.1.0",
     "gatsby-plugin-feed": "^2.0.8",
     "gatsby-plugin-google-analytics": "^2.0.5",
     "gatsby-plugin-manifest": "^2.0.5",
@@ -34,7 +35,9 @@
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
+    "react-icons": "^3.9.0",
     "react-live": "^2.2.0",
+    "react-toggle": "^4.1.1",
     "react-typography": "^0.16.13",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75",
